tests/NormalTests/paczka1/fuzzy1/37565041.err
Error in line 18: m4xWb A506 38,3
Error in line 26: iFz0c A973 23,1
Error in line 16: S913 S526 5,8
Error in line 35: S913 A506 31,7
